# sleipnir-lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: sleipnir_alignment.h  sleipnir_atomic.h  sleipnir_bumpalloc.h  sleipnir_common.h  sleipnir_list.h  sleipnir_macros.h
src/: sleipnir_bumpalloc.c  sleipnir_list.c
src/utils/: libsleipnir_demo.c
